# IASD_NLP_Project

./: .gitignore  Linformer.py  README.md  benchmark_2.py  benchmark_plots.py  configuration.yaml  dataset.py  libconfig.py  main.py  main_NLP.py  main_archive.py  models.py  presentation papier.md  presentation_paper.md  pyproject.toml
benchmark_results/: linformer_seq128_epochs.json  linformer_seq256_epochs.json  linformer_seq512_epochs.json  linformer_seq64_epochs.json  sequence_length_comparison.json  transformer_seq128_epochs.json  transformer_seq256_epochs.json  transformer_seq512_epochs.json  transformer_seq64_epochs.json
components/: MHAttention.py  __init__.py  attentionUtils.py  linearAttentionHead.py  positionalEmbedding.py  subLayers.py  transformers.py
transformers_project/: models.py
transformers_project/linformer/: EF_generator.py  __init__.py  activation.py  linear_attention_head.py  linformer.py  linformer_blocks.py  linformer_layers.py  mask.py  multi_attention_seperated_heads.py  position_wise_feed_forward.py  positional_encoding.py  projections.py  residual.py  rms_norm.py
transformers_project/utils/: __init__.py  directory_manager.py  types.py  utils.py
transformers_project/utils/papers/: rotary.py
utils/: types.py  utils.py
